# bbq_new

./: Makefile  Makefile.am  Makefile.am~  Makefile.in  README.md  addFace.c  addFace.c~  auto_first.sh  auto_second.sh  auto_third.sh  bbq  calc.c  calc.c~  calendar.c  calendar.c~  calendar.h  calendar.h~  callbacks.c  callbacks.c~  callbacks.h  capture.c  capture.c~  changeFace.c  changeFace.c~  changeImage.c  changeImage.c~  chatRecord.c  chatRecord.c~  chatRecord.h  chatWindow.h  chatWindow.h~  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac  configure.ac~  creat_main.c  creat_main.c~  (+91 more)
.deps/: addFace.Po  calc.Po  calendar.Po  callbacks.Po  capture.Po  changeFace.Po  changeImage.Po  chatRecord.Po  creat_main.Po  createChatWindow.Po  fileSelect.Po  filetansfer.Po  fontSelect.Po  getMenu_right.Po  getMenu_state.Po  getMenu_style.Po  get_hbox_bottom.Po  get_hbox_top.Po  get_vbox_mid.Po  global.Po  linpop.Po  main.Po  message.Po  msg_list.Po  msgrecv.Po  msgsend.Po  mytime.Po  otherCallback.Po  parse_image_path.Po  pg_ChatWindow.Po  sendMessage.Po  set_soft.Po  showRecord.Po  tips.Po  udp.Po  userinfo.Po  utf16_to_utf8.Po  util.Po
autom4te.cache/: output.1  output.2  requests  traces.0  traces.1  traces.2
