AUTOMAKE_OPTIONS = foreign
INCLUDES = `pkg-config --cflags gtk+-2.0`
LIBS = `pkg-config --libs gtk+-2.0`
bin_PROGRAMS = bbq
bbq_SOURCES = main.c main.h creat_main.c creat_main.h callbacks.c callbacks.h chatRecord.h chatRecord.c get_hbox_bottom.c get_hbox_bottom.h get_hbox_top.c get_hbox_top.h getMenu_state.c getMenu_state.h  get_vbox_mid.h get_vbox_mid.c set_soft.h set_soft.c mytime.c mytime.h userinfo.c userinfo.h chatWindow.h createChatWindow.c msg_list.c msg_list.h getMenu_right.c getMenu_Right.h udp.c udp.h util.h util.c msgrecv.c msgrecv.h msgsend.h msgsend.c linpop.c linpop.h filetansfer.c filetansfer.h message.c message.h addFace.c changeFace.c capture.c changeImage.c getMenu_style.c getMenu_style.h fileSelect.c sendMessage.c otherCallback.c showRecord.c showRecord.h fontSelect.c calendar.c calendar.h utf16_to_utf8.c utf16_to_utf8.h global.h global.c
